--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello!</title>
-    <meta name="description" content="SDK Pack, a custom track distribution for Mario Kart Wii by Kawaii Shadowii, Dokan & KevinVG207."/>
-    <meta name="author" content="Kawaii Shadowii, Dokan & KevinVG207" />
-    <meta name="keywords" content="mario kart wii, mkwii, SDK Pack, kevinvg207, rooms, online, status, online status, multiplayer, ctgp, wiilink, pulsar" />
-    <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
-  </head>
-  <body>
-    <p>Hello, world!</p>
-  </body>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Hello!</title>
+        <meta name="description" content="SDK Pack, a custom track distribution for Mario Kart Wii by Kawaii Shadowii, Dokan & KevinVG207."/>
+        <meta name="author" content="Kawaii Shadowii, Dokan & KevinVG207" />
+        <meta name="keywords" content="mario kart wii, mkwii, SDK Pack, kevinvg207, rooms, online, status, online status, multiplayer, ctgp, wiilink, pulsar" />
+        <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
+    </head>
+    <body>
+        <div class="main-container">
+            <h1>SDK Pack</h1>
+            <h3>Custom Track Distribution for Mario Kart Wii by Kawaii Shadowii, Dokan & KevinVG207</h3>
+            <p><a href="/download" target="_blank">Download</a> - <a href="/rooms">Rooms Browser</a></p>
+            <p>Riivolution mod based on Pulsar, using a custom Wiilink server.</p>
+        </div>
+    </body>
 </html>
