--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="main-container">
             <h1>SDK Pack</h1>
-            <h3>Custom Track Distribution for Mario Kart Wii by Kawaii Shadowii, Dokan & KevinVG207</h3>
+            <h3>Custom Track Distribution for Mario Kart Wii <br>by Kawaii Shadowii, Dokan & KevinVG207</h3>
             <p><a href="/download" target="_blank">Download</a> - <a href="/rooms">Rooms Browser</a></p>
             <p>Riivolution mod based on Pulsar, using a custom Wiilink server.</p>
         </div>
