--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Hello!</title>
+        <title>SDK Pack - Custom Track Distribution</title>
         <meta name="description" content="SDK Pack, a custom track distribution for Mario Kart Wii by Kawaii Shadowii, Dokan & KevinVG207."/>
         <meta name="author" content="Kawaii Shadowii, Dokan & KevinVG207" />
         <meta name="keywords" content="mario kart wii, mkwii, SDK Pack, kevinvg207, rooms, online, status, online status, multiplayer, ctgp, wiilink, pulsar" />
