--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <div class="main-container">
             <h1>SDK Pack</h1>
             <h3>Custom Track Distribution for Mario Kart Wii <br>by Kawaii Shadowii, Dokan & KevinVG207</h3>
-            <p><a href="/download" target="_blank">Download</a> - <a href="/rooms">Rooms Browser</a></p>
             <p>Riivolution mod based on Pulsar, using a custom Wiilink server.</p>
+            <p><a href="/download" target="_blank">Download</a> - <a href="/rooms">Rooms Browser</a></p>
+            <p>Community / Support:</p>
+            <a href="https://discord.gg/qDJSmyFVHp" target="_blank"><img id="discord-button" src="https://discordapp.com/api/guilds/1372909391321370657/widget.png?style=banner2" /></a>
         </div>
     </body>
 </html>
