Added image and dark mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <div class="main-container">
             <h1>SDK Pack</h1>
+            <img id="banner-image" src="img/banner.png" alt="SDK Pack Banner" />
             <h3>Custom Track Distribution for Mario Kart Wii <br>by Kawaii Shadowii, Dokan & KevinVG207</h3>
             <p>Riivolution mod based on Pulsar, using a custom Wiilink server.</p>
             <p><a href="/download" target="_blank">Download</a> - <a href="/rooms">Rooms Browser</a></p>
