--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img id="banner-image" src="img/banner.png" alt="SDK Pack Banner" />
             <h3>Custom Track Distribution for Mario Kart Wii <br>by Kawaii Shadowii, Dokan & KevinVG207</h3>
             <p>Riivolution mod based on Pulsar, using a custom Wiilink server.</p>
-            <p><a href="/download" target="_blank">Download</a> - <a href="/tracks" target="_blank">Track List</a> - <a href="/rooms" target="_blank">Rooms Browser</a></p>
+            <p><a href="/download" target="_blank">Download</a> - <a href="/tracks" target="_blank">Track List</a> - <a href="/rooms">Rooms Browser</a></p>
             <p>Community / Support:</p>
             <a href="https://discord.gg/qDJSmyFVHp" target="_blank"><img id="discord-button" src="https://discordapp.com/api/guilds/1372909391321370657/widget.png?style=banner2" /></a>
         </div>
