--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Riivolution mod based on Pulsar, using a custom Wiilink server.</p>
             <p><a href="/download" target="_blank">Download</a> - <a href="/tracks" target="_blank">Track List</a> - <a href="/rooms">Rooms Browser</a></p>
             <p>Community / Support:</p>
-            <a href="https://discord.gg/qDJSmyFVHp" target="_blank"><img id="discord-button" src="https://discordapp.com/api/guilds/1372909391321370657/widget.png?style=banner2" /></a>
+            <a href="https://discord.gg/qDJSmyFVHp" target="_blank"><img id="discord-button" src="https://discordapp.com/api/guilds/1372909391321370657/widget.png?style=banner2&haha=funny" /></a>
         </div>
     </body>
 </html>
