--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <p><a href="/download" target="_blank">Download</a> - <a href="/tracks" target="_blank">Track List</a> - <a href="/rooms">Rooms Browser</a></p>
             <p>Community / Support:</p>
             <a href="https://discord.gg/qDJSmyFVHp" target="_blank"><img id="discord-button" src="https://discordapp.com/api/guilds/1372909391321370657/widget.png?style=banner2&haha=funny" /></a>
+            <p><a href="https://github.com/SDKPack-Dev" target="_blank">GitHub</a> - <a href="https://wiki.tockdom.com/wiki/SDK_Pack" target="_blank">Custom Mario Kart Wiiki</a></p>
         </div>
     </body>
 </html>
