--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="canonical" href="https://sdkpack.net/" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>SDK Pack - Custom Track Distribution</title>
         <meta name="description" content="SDK Pack, a custom track distribution for Mario Kart Wii by Kawaii Shadowii, Dokan & KevinVG207."/>
